# pcsh

./: CMakeLists.txt  appveyor.yml  pcsh.cmake
cmake/: ProjTools.cmake
coverage/2016_02_20_09_43_51/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage/2016_02_20_09_43_51/test/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  tarena.cpp.func-sort-c.html  tarena.cpp.func.html  tarena.cpp.gcov.html  tparser.cpp.func-sort-c.html  tparser.cpp.func.html  tparser.cpp.gcov.html  tpcshver.cpp.func-sort-c.html  tpcshver.cpp.func.html  tpcshver.cpp.gcov.html
coverage/2016_02_20_09_43_51/unittest/: index-sort-b.html  index-sort-f.html  index-sort-l.html  (+7 more)
doc/: CMakeLists.txt
include/pcsh/: arena.hpp  assert.hpp  ast.hpp  ast_ops.hpp  exportsym.h  ir.hpp  ir_operations.hpp  noncopyable.hpp  ostream.hpp  parser.hpp  result_type.hpp  types.hpp  version.hpp
src/: linebufistream.hpp  main.cpp
src/pcsh/: arena.cpp  assert.cpp  ir.cpp  ir_evaluator.cpp  ir_evaluator.hpp  ir_nodes.hpp  ir_nodes_fwd.hpp  ir_operations.cpp  ir_printer.cpp  ir_printer.hpp  ir_variable_printer.cpp  ir_variable_printer.hpp  ir_visitor.cpp  ir_visitor.hpp  parser.cpp  parser_engine.cpp  parser_engine.hpp  populate_symbol_table.cpp  populate_symbol_table.hpp  result_type.hpp  symbol_table.cpp  symbol_table.hpp  tree_cloner.cpp  tree_cloner.hpp  tree_validation.cpp  type_checker.cpp  type_checker.hpp  version.cpp
test/: CMakeLists.txt  tarena.cpp  tparser.cpp  tpcshver.cpp
test/scripts/: simplemath.pcsh
tools/: codecov
unittest/: unittest.hpp
(+168 files in other folders)
